--- a/mixxx/res/translations/mixxx/cs.po
+++ b/mixxx/res/translations/mixxx/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: mixxx\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-10-28 15:35-0400\n"
-"PO-Revision-Date: 2010-11-05 09:24+0000\n"
+"PO-Revision-Date: 2010-11-16 19:34+0000\n"
 "Last-Translator: Petr Šimáček <petr.simacek@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-11-06 04:47+0000\n"
+"X-Launchpad-Export-Date: 2010-11-17 04:48+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: AutoDJFeature#1
@@ -1091,7 +1091,7 @@ msgstr ""
 #: DlgPrefSound#7
 msgctxt "DlgPrefSound#7"
 msgid "You cannot send multiple outputs to a single channel"
-msgstr ""
+msgstr "Není možné poslat více výstupů do jednoho kanálu"
 
 #: DlgPrefSound#8
 msgctxt "DlgPrefSound#8"
